--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <!--preload-links-->
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"><!--ssr-outlet--></div>
     <script type="module" src="/src/client.js"></script>
   </body>
 </html>
